php-mysql/apache-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: apache-php
  namespace: ludo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: apache-ludo
      containers:
      - image: tutum/apache-php
        name: apache
        volumeMounts:
        - name: www
          mountPath: /var/www/html
