php-mysql/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  namespace: monitoring
  labels:
   app: db
   version: '2'
spec:
  containers:
  - image: mariadb
    name: mariadb
