php-mysql/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: ludo
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
