php-mysql/service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: ludo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
