php-mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: monitoring
  labels:
    app: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
