php-mysql/dir-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apache
spec:
  rules:
    - host: php.ludovic.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
