php-mysql/ingress-php.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-db
  namespace: php
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - php.ludovic.tech
  rules:
    - host: php.ludovic.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: web
               port:
                 number: 80
